fixed navbar alignment;

--- a/components/Footer/styles.module.scss
+++ b/components/Footer/styles.module.scss
@@ -2,18 +2,18 @@
 @import "../../styles/mixins";
 
 .footer {
+    margin: -10px;
+    padding: 5px;
+    background-color: $accent2;
     position: relative;
-    bottom: 0;
-    margin-top: 150px;
-    width: 100%;
+    bottom: -10px;
+    margin-top: 100px;
+   
     text-align: center;
-    color: $accent2;
+    color: white;
     p {
         letter-spacing: 3px;
         text-transform: uppercase;
         opacity: 50%;
-        @include respond-below(sm){
-            font-size: 0.5em;
-        }
     }
 }
